# quote-client

./: Cargo.toml  README.md  Trunk.toml  index.html  styles.css  tailwind.config.js
public/: openapi.json  site.webmanifest  styles.css
src/: api.rs  main.rs  types.rs
src/components/: about.rs  app.rs  create_quote_form.rs  home.rs  mod.rs  navigation.rs  quote_card.rs  quote_display.rs  quotes_list.rs  quotes_page.rs  random_quote.rs  show_quote.rs
