[package]
name = "quote-client"
version = "0.1.0"
edition = "2024"

[dependencies.console_error_panic_hook]
version = "0.1.7"

[dependencies.leptos]
version = "0.8.2"
features = ["csr"]

[dependencies.leptos_router]
version = "0.8.2"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"

[dependencies.wasm-bindgen]
version = "0.2.100"

[dependencies.wasm-bindgen-futures]
version = "0.4.50"

[dependencies.js-sys]
version = "0.3.77"

[dependencies.reqwasm]
version = "0.5.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Event",
    "EventTarget",
    "SubmitEvent"
]